updated explore page functionalities

--- a/pages/completedTasks.html
+++ b/pages/completedTasks.html
@@ -22,8 +22,11 @@
   </head>
   <body>
     <header class="home-and-tasks">
-      <a href="./tasks.html">Tasks</a>
-      <a href="../index.html">Home</a>
+      <a href="./tasks.html"><i class="fa-solid fa-arrow-left"></i></a>
+      <div class="explore-and-home">
+        <a class="explore" href="../pages/searchTasks.html">Explore</a>
+        <a href="../index.html">Home</a>
+      </div>
     </header>
     <figure class="well-done">
       <img src="../assets/illustrative stickers/wellDone.svg" alt="" />
