--- a/pages/searchTasks.html
+++ b/pages/searchTasks.html
@@ -26,6 +26,12 @@
       <a class="to-home" href="tasks.html"
         ><i class="fa-solid fa-arrow-left"></i
       ></a>
+      <div class="home-and-completed">
+        <a class="completed-task" href="../pages/completedTasks.html"
+          >Completed Tasks</a
+        >
+        <a class="home" href="../index.html">Home</a>
+      </div>
     </div>
 
     <figure class="search-sticker-container">
