--- a/pages/tasks.html
+++ b/pages/tasks.html
@@ -37,7 +37,7 @@
     <figure class="tasks-sticker-container">
       <img
         class="tasks-sticker"
-        src="../assets/illustrative stickers/tasks.svg"
+        src="../assets/illustrative stickers/goals.svg"
         alt=""
       />
     </figure>
